Update crop_image_menu.xml for v5.1.2 release

--- a/cropper/src/main/res/menu/crop_image_menu.xml
+++ b/cropper/src/main/res/menu/crop_image_menu.xml
@@ -29,8 +29,7 @@
     </item>
      <item
         android:id="@+id/crop_image_menu_crop"
-        android:icon="@drawable/crop"
-        android:title="@string/crop_image_menu_crop"
+        android:title="Apply"
         app:showAsAction="always"/>
 
 </menu>
